--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@better-auth/cli": "^1.3.7",
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.14.0",
     "@prisma/extension-accelerate": "^2.0.2",
